# ouro-py

./: .env.example  COMMANDS.md  README.md  pyproject.toml  requirements.txt  setup.py
examples/: build_cif_properties_dataset.py
ouro/: __init__.py  __version__.py  _client.py  _constants.py  _exceptions.py  _logs.py  _resource.py  _utils.py  air.py  client.py  config.py  earth.py  events.py  old.py
ouro/air/: __init__.py
ouro/models/: __init__.py  _base.py  action.py  asset.py  file.py  notification.py  organization.py  route.py  service.py  team.py
ouro/realtime/: websocket.py
ouro/resources/: __init__.py  assets.py  comments.py  content.py  conversations.py  datasets.py  files.py  money.py  notifications.py  organizations.py  posts.py  quests.py  routes.py  services.py  teams.py  users.py
ouro/resources/elements/air/: content.py  posts.py
ouro/resources/elements/earth/: datasets.py
ouro/utils/: __init__.py  content.py  openapi.py
tests/: air.ipynb  conversations.ipynb  datasets-local.ipynb  earth.ipynb  files-local.ipynb  posts-local.ipynb  services-local.ipynb  services.ipynb  test.py  test_asset_actions.py  test_asset_download.py  test_asset_share.py  test_attribution.py  test_datasets.py  test_events.py  test_files_search.py  test_posts_content_path.py  test_quests.py  test_resource_response.py  test_route_actions.py  test_route_models.py
tests/cif_output/: gen_0.cif
tests/fixtures/: webhook_events.json
