[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ouro-py"
dynamic = ["version"]
description = "The official Python library for the Ouro API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Matt Moderwell", email = "matt@ouro.foundation" }]
keywords = ["ouro"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx",
    "numpy",
    "pandas",
    "pydantic",
    "python-dotenv",
    "python-socketio[asyncio_client]",
]

[project.urls]
Homepage = "https://github.com/ourofoundation/ouro-py"
Repository = "https://github.com/ourofoundation/ouro-py"
PyPI = "https://pypi.org/project/ouro-py"

[tool.hatch.version]
path = "ouro/__version__.py"


[tool.hatch.build]
include = ["/ouro"]

[tool.hatch.build.targets.wheel]
include = ["/ouro"]

[tool.hatch.build.targets.sdist]
include = ["/ouro"]
